syntax = "proto2";

package vm_scheduler.proto;

import "structures/task.proto";


message TaskAdditionResult {
  required TaskId task_id = 1;
}
